--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,261 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+.container{
+	max-width: 900px;
+	padding-right: 50px;
+	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+}
+nav{
+	display:flex;
+    flex-direction: row;
+    justify-content: space-evenly; 
+  
+}
+@media (max-width:800px){
+    nav{
+        display:flex;
+        flex-direction: column;
+    }
+}
+.nav-menu{
+	float: left;
+	display:flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    order: 2;
+}
+a{
+	margin: 30px;
+	text-decoration: none;
+}
+.nav-img {
+	margin: 20px -40px 20px 20px;
+	display: flexbox;
+	justify-content: flex-end;
+}
+@media (max-width:800px){
+    .nav-img{
+        display:flex;
+        order: 1;
+        justify-content: center;
+    }
+.header-image {
+	width: 100%;
+}
+@media (max-width:800px){
+    .header-image{
+     
+    }
+.header-content{
+	width:100%;
+	padding: 15px 0px 15px 0px;
+}
+h2{
+	font-size: 2em;
+}
+
+content{
+	display: flex;
+	flex-direction: column;
+}
+	
+.first-row{
+	padding: 0px 0px 10px 0px;
+	display:flex; 
+	flex-direction: row;
+	justify-content: space-between;
+
+}
+.second-row{
+	padding: 0px 0px 10px 0px;
+	display:flex;
+	flex-direction: row;
+	
+}
+.third-row{
+	padding: 0px 0px 10px 0px;
+	display:flex;
+	flex-direction: row;
+	
+}
+
+.first-row-column1{
+	border: 1px solid black;
+	padding-right: 10px;
+}
+.first-row-column2{
+	border: 1px solid black;
+	padding-left: 10px;
+}
+.second-row-column1{
+	border: 1px solid black;
+}
+.second-row-column2{
+	border: 1px solid black;
+}
+.third-row-column1{
+	border: 1px solid black;
+}
+.third-row-column2{
+	border: 1px solid black;
+}
+.mantra{
+	padding: 20px;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+.mantra-left{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+.mantra-left h1 {
+	font-size: 4em;
+}
+.mantra-left h1 .target1{
+	text-align: center;
+}
+.mantra-left h1 .target2{
+	text-align: center;
+}
+button {
+	padding: 5px;
+}
+.mantra-right{
+}
+hr {
+	border: 0;
+	clear:both;
+	display:block;
+	width: 100%;               
+	background-color: black;
+	height: 1px;
+  }
+
+  .main-content {
+	  padding: 20px 20px 20px 20px;
+	  display: flex;
+	  flex-direction: column;
+  }
+  .main-content1 {
+	  padding: 20px 0px 20px 0px ;
+	  display: flex;
+	  flex-direction: row;
+  }
+  .main-content1 .features{
+	  padding: 0px 20px 0px 0px;
+  } 
+  .main-content2 {
+	padding: 20px 0px 20px 0px;
+	display: flex;
+	flex-direction: row;
+}
+address{
+	padding: 20px 20px 20px 20px;
+	display: flex;
+	flex-direction: column;
+}
+.home {
+	padding: 10px 0px 10px 0px;
+}
+.phone {
+	padding: 10px 0px 10px 0px;
+}
+.mail {
+	padding: 10px 0px 10px 0px;
+}
+
+.foot-note{
+	padding: 20px 20px 20px 20px;
+	display: flex;
+	justify-content: center;
+	
+}
+footer{
+
+}
+.footer-content{
+	display: flex;
+	
+}
+.footer-content-closing{
+	padding: 20px 0px 20px 0px;;
+	display: flex;
+	flex-direction: row;
+}
+footer-heading{
+	display: flex;
+	flex-direction: column;
+}
+.services-info-img{
+	float: right;
+	flex: 50%;
+}
 
