--- a/css/index.css
+++ b/css/index.css
@@ -66,11 +66,11 @@ h1, h2, h3, h4, h5 {
 
 .container{
 	max-width: 900px;
-	padding-right: 50px;
 	margin: 0 auto;
 	display: flex;
-	flex-direction: column;
+    flex-direction: column;
 }
+
 nav{
 	display:flex;
     flex-direction: row;
@@ -78,6 +78,12 @@ nav{
   
 }
 @media (max-width:800px){
+    nav{
+        display:flex;
+        flex-direction: column;
+    }
+}
+@media (max-width:500px){
     nav{
         display:flex;
         flex-direction: column;
@@ -95,12 +101,29 @@ nav{
         order: 2;
     }
 }
+@media (max-width:500px){
+    .nav-menu{
+        border-bottom: 1px black;
+        display:flex;
+        flex-direction: column; 
+        order: 2;
+        justify-content: space-evenly;
+    }
+}
 a{
 	margin: 30px;
 	text-decoration: none;
 }
+@media (max-width:500px){
+    a{
+        margin: 10px;
+        display: flex;
+        justify-content: center;
+        border-bottom: 1px solid black;
+    }
+}
 .nav-img {
-	margin: 20px -40px 20px 20px;
+	padding-top:20px;
 	display: flexbox;
 	justify-content: flex-end;
 }
@@ -111,12 +134,15 @@ a{
         justify-content: center;
     }
 }
-.header-image {
-	width: 100%;
-}
+
 @media (max-width:800px){
     .mantra-left {
         padding-left: 35%;
+    }
+}
+@media (max-width:500px){
+    .mantra-left {
+        padding-left: 20%; 
     }
 }
 
