--- a/css/index.css
+++ b/css/index.css
@@ -142,7 +142,7 @@ a{
 }
 @media (max-width:500px){
     .mantra-left {
-        padding-left: 20%; 
+        padding-left: 30%; 
     }
 }
 
@@ -222,6 +222,12 @@ content{
 }
 .mantra-left h1 {
 	font-size: 4em;
+}
+
+@media (max-width:500px){
+    .mantra-left h1{
+        font-size: 3em;
+    }
 }
 .mantra-left h1 .target1{
 	text-align: center;
